PROD_10-24-19/force-app/main/default/objects/Investment_Vehicle__c/fields/Number_of_Current_Investments__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Current_Investments__c</fullName>
    <inlineHelpText>Roll up from most recent 3rd Party Investor Position records totaling the Current Investments in the Fund. Total number of active commitments made with PFG.</inlineHelpText>
    <label>Number of Current Commitments</label>
    <summaryFilterItems>
        <field>Investor_Position__c.Is_Active__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Investor_Position__c.Current_Commitments_USD__c</field>
        <operation>greaterThan</operation>
        <value>0</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Investor_Position__c.Source_of_Capital__c</field>
        <operation>equals</operation>
        <value>Limited Partners, Operating Partner</value>
    </summaryFilterItems>
    <summaryForeignKey>Investor_Position__c.Investment_Vehicle__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>