PROD_10-24-19/force-app/main/default/objects/Investment_Vehicle__c/fields/Number_of_Current_Investors__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Current_Investors__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Roll up from most recent 3rd Party Investor Position records totalling the unique Investors in the Fund.</inlineHelpText>
    <label>Number of Current Investors</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>