PROD_10-24-19/force-app/main/default/objects/Investment_Vehicle__c/fields/Number_of_Historical_Investments__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Historical_Investments__c</fullName>
    <inlineHelpText>Roll up of 3rd Party Investor Position records representing the total number of commitments made in this fund including wound down and sold off commitments.</inlineHelpText>
    <label>Number of Historical Commitments</label>
    <summaryFilterItems>
        <field>Investor_Position__c.Is_Active__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Investor_Position__c.Historical_Commitment_US__c</field>
        <operation>greaterThan</operation>
        <value>0</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Investor_Position__c.Source_of_Capital__c</field>
        <operation>equals</operation>
        <value>Limited Partners, Operating Partner</value>
    </summaryFilterItems>
    <summaryForeignKey>Investor_Position__c.Investment_Vehicle__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>