PROD_10-24-19/force-app/main/default/objects/Investment_Vehicle__c/fields/Number_of_Institutional_Investors__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Institutional_Investors__c</fullName>
    <label>Number of Institutional Investors</label>
    <summaryFilterItems>
        <field>Investor_Position__c.RecordTypeId</field>
        <operation>equals</operation>
        <value>Public Securities</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Investor_Position__c.Is_Active__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Investor_Position__c.Investment_Vehicle__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>