PROD_10-24-19/force-app/main/default/objects/Investment_Vehicle__c/fields/Performance_Incentive_Fee_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Performance_Incentive_Fee_Schedule__c</fullName>
    <label>Performance Incentive Fee - Schedule</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>