PROD_10-24-19/force-app/main/default/objects/Investment_Vehicle__c/fields/PFG_Investment_Vehicle_Active__c.field-meta.xml
<CustomField>
    <fullName>PFG_Investment_Vehicle_Active__c</fullName>
    <description>PFG Active Funds for Investor Profile</description>
    <formula>or(text( Status__c )=&quot;Marketing&quot;,text( Status__c )=&quot;Discontinued&quot;, text( Status__c )=&quot;Closed&quot;, text( Status__c )=&quot;Fully Divested&quot;)&amp;&amp; or(text( Vehicle_Type__c )=&quot;Private Fund&quot;,text( Vehicle_Type__c )=&quot;Private Fund - Open Ended&quot;, text( Vehicle_Type__c )=&quot;Separate Accounts&quot;,text( Vehicle_Type__c )=&quot;Co-Invest&quot;,text( Vehicle_Type__c )=&quot;Joint Venture&quot;)&amp;&amp;  RecordType.Name =&quot;Fund Internal&quot; &amp;&amp;  Total_Raised_Capital__c &gt;0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>PFG Active Funds for Investor Profile</inlineHelpText>
    <label>PFG Investment Vehicle Active</label>
    <type>Checkbox</type>
</CustomField>