PROD_10-24-19/force-app/main/default/objects/Investment_Vehicle__c/fields/Platform__c.field-meta.xml
<CustomField>
    <fullName>Platform__c</fullName>
    <label>Platform</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Agriculture</fullName>
            </value>
            <value>
                <fullName>Corporate Credit</fullName>
            </value>
            <value>
                <fullName>Corporate High Yield</fullName>
            </value>
            <value>
                <fullName>Credit</fullName>
            </value>
            <value>
                <fullName>Credit Opportunities</fullName>
            </value>
            <value>
                <fullName>Energy Infrastructure</fullName>
            </value>
            <value>
                <fullName>Equity Opportunities</fullName>
            </value>
            <value>
                <fullName>General</fullName>
            </value>
            <value>
                <fullName>Infrastructure</fullName>
            </value>
            <value>
                <fullName>Investments</fullName>
            </value>
            <value>
                <fullName>Opportunistic MBS</fullName>
            </value>
            <value>
                <fullName>Power</fullName>
            </value>
            <value>
                <fullName>Private Equity</fullName>
            </value>
            <value>
                <fullName>Property</fullName>
            </value>
            <value>
                <fullName>Real Asset Debt</fullName>
            </value>
            <value>
                <fullName>Real Asset Solutions</fullName>
            </value>
            <value>
                <fullName>Real Estate</fullName>
            </value>
            <value>
                <fullName>Securitized Credit</fullName>
            </value>
            <value>
                <fullName>Specialty Funds</fullName>
            </value>
            <value>
                <fullName>Strategic Income</fullName>
            </value>
            <value>
                <fullName>Timberland</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>