PROD_10-24-19/force-app/main/default/objects/Investment_Vehicle__c/fields/PSG_Opportunity_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>PSG_Opportunity_Record_Type__c</fullName>
    <description>PSG Record Type formula, determine the record type based on the investment vehicle record type</description>
    <formula>CASE(
 RecordType.DeveloperName,
 &#39;Credit_Opportunities&#39;, &#39;01233000000QNoy&#39;,
 &#39;01240000000MHII&#39;
)
/*
If credit, map to credit opp record type,
otherwise default to the psg record type
*/</formula>
    <label>PSG Opportunity Record Type</label>
    <type>Text</type>
</CustomField>