PROD_10-24-19/force-app/main/default/objects/Investment_Vehicle__c/fields/Redemption_USD__c.field-meta.xml
<CustomField>
    <fullName>Redemption_USD__c</fullName>
    <inlineHelpText>PSG roll up from Investor position child records</inlineHelpText>
    <label>Redemption (USD)</label>
    <summarizedField>Investor_Position__c.Redemption_USD__c</summarizedField>
    <summaryFilterItems>
        <field>Investor_Position__c.RecordTypeId</field>
        <operation>equals</operation>
        <value>Child PSG Investor Positions</value>
    </summaryFilterItems>
    <summaryForeignKey>Investor_Position__c.Investment_Vehicle__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>