PROD_10-24-19/force-app/main/default/objects/Investment_Vehicle__c/fields/Risk_Return__c.field-meta.xml
<CustomField>
    <fullName>Risk_Return__c</fullName>
    <label>Risk-Return</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Value Add</fullName>
            </value>
            <value>
                <fullName>Opportunistic</fullName>
            </value>
            <value>
                <fullName>Core Plus</fullName>
            </value>
            <value>
                <fullName>Credit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>