PROD_10-24-19/force-app/main/default/objects/Investment_Vehicle__c/fields/Seed_Capital__c.field-meta.xml
<CustomField>
    <fullName>Seed_Capital__c</fullName>
    <label>Seed Capital</label>
    <summarizedField>Investor_Position__c.Market_Value_AUM_Quarter__c</summarizedField>
    <summaryFilterItems>
        <field>Investor_Position__c.Source_of_Capital__c</field>
        <operation>equals</operation>
        <value>Seed</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Investor_Position__c.RecordTypeId</field>
        <operation>equals</operation>
        <value>Public Securities</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Investor_Position__c.Is_Active__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Investor_Position__c.Investment_Vehicle__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>