PROD_10-24-19/force-app/main/default/objects/Investment_Vehicle__c/fields/Sponsor__c.field-meta.xml
<CustomField>
    <fullName>Sponsor__c</fullName>
    <label>Sponsor</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>BAM</fullName>
            </value>
            <value>
                <fullName>BEP</fullName>
            </value>
            <value>
                <fullName>BPY</fullName>
            </value>
            <value>
                <fullName>BIP</fullName>
            </value>
            <value>
                <fullName>BBU</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>