PROD_10-24-19/force-app/main/default/objects/Investment_Vehicle__c/fields/Sponsors__c.field-meta.xml
<CustomField>
    <fullName>Sponsors__c</fullName>
    <description>The entity that is Sponsoring the Fund</description>
    <inlineHelpText>The entity that is Sponsoring the Fund</inlineHelpText>
    <label>Sponsors</label>
    <length>100</length>
    <type>Text</type>
</CustomField>