PROD_10-24-19/force-app/main/default/objects/Investment_Vehicle__c/fields/Talking_Points_Modified_On__c.field-meta.xml
<CustomField>
    <fullName>Talking_Points_Modified_On__c</fullName>
    <label>Talking Points Modified On</label>
    <type>Date</type>
</CustomField>