PROD_10-24-19/force-app/main/default/objects/Investment_Vehicle__c/fields/Ticker__c.field-meta.xml
<CustomField>
    <fullName>Ticker__c</fullName>
    <label>Ticker</label>
    <length>40</length>
    <type>Text</type>
</CustomField>