PROD_10-24-19/force-app/main/default/objects/Investment_Vehicle__c/fields/Total_Raised_Capital__c.field-meta.xml
<CustomField>
    <fullName>Total_Raised_Capital__c</fullName>
    <formula>Internal_Raised_Capital__c +  External_Raised_Capital__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Calculated automatically based on the Internal Raised (Historical/Original) Capital and the External Raised Capital.</inlineHelpText>
    <label>Total Raised Capital</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>