PROD_10-24-19/force-app/main/default/objects/Investment_Vehicle__c/fields/Updates__c.field-meta.xml
<CustomField>
    <fullName>Updates__c</fullName>
    <label>Updates</label>
    <length>40</length>
    <type>Text</type>
</CustomField>