PROD_10-24-19/force-app/main/default/objects/Investment_Vehicle__c/fields/Vehicle_Type__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Type__c</fullName>
    <label>Vehicle Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Canadian Pooled Fund</fullName>
            </value>
            <value>
                <fullName>Closed End Fund</fullName>
            </value>
            <value>
                <fullName>General Overview</fullName>
            </value>
            <value>
                <fullName>Hedge Fund</fullName>
            </value>
            <value>
                <fullName>Listed Issuers</fullName>
            </value>
            <value>
                <fullName>Mutual Fund</fullName>
            </value>
            <value>
                <fullName>Private Fund - Open Ended</fullName>
            </value>
            <value>
                <fullName>Private Fund</fullName>
            </value>
            <value>
                <fullName>Separate Accounts</fullName>
            </value>
            <value>
                <fullName>Separately Managed Account</fullName>
            </value>
            <value>
                <fullName>UCITS</fullName>
            </value>
            <value>
                <fullName>Co-Invest</fullName>
            </value>
            <value>
                <fullName>Joint Venture</fullName>
            </value>
            <value>
                <fullName>Sale of Asset</fullName>
            </value>
            <value>
                <fullName>Private Fund - Closed Ended</fullName>
            </value>
            <value>
                <fullName>SMA</fullName>
            </value>
            <value>
                <fullName>Direct Investment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>