PROD_10-24-19/force-app/main/default/objects/Investment_Vehicle__c/fields/Vintage_Year__c.field-meta.xml
<CustomField>
    <fullName>Vintage_Year__c</fullName>
    <inlineHelpText>Year of the First Closing Date of a Fund</inlineHelpText>
    <label>Vintage Year</label>
    <length>100</length>
    <type>Text</type>
</CustomField>