PROD_10-24-19/force-app/main/default/objects/Investment_Vehicle__c/fields/X1st_Close_Capital__c.field-meta.xml
<CustomField>
    <fullName>X1st_Close_Capital__c</fullName>
    <inlineHelpText>Amount invested as of 1st Close</inlineHelpText>
    <label>1st Close Capital</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>