PROD_10-24-19/force-app/main/default/objects/Investment_Vehicle__c/fields/X3rd_Close_Date__c.field-meta.xml
<CustomField>
    <fullName>X3rd_Close_Date__c</fullName>
    <label>3rd Close Date</label>
    <type>Date</type>
</CustomField>