PROD_10-24-19/force-app/main/default/objects/Investment_Vehicle__c/fields/X5th_Close_Capital__c.field-meta.xml
<CustomField>
    <fullName>X5th_Close_Capital__c</fullName>
    <label>5th Close Capital</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>