PROD_10-24-19/force-app/main/default/objects/Investment_Vehicle__c/recordTypes/Credit_Opportunities.recordType-meta.xml
<RecordType>
    <fullName>Credit_Opportunities</fullName>
    <active>true</active>
    <label>Credit Opportunities</label>
</RecordType>