PROD_10-24-19/force-app/main/default/objects/Investment_Vehicle__c/recordTypes/Fund_External.recordType-meta.xml
<RecordType>
    <fullName>Fund_External</fullName>
    <active>true</active>
    <description>Non Brookfield Funds</description>
    <label>Fund External</label>
</RecordType>