PROD_10-24-19/force-app/main/default/objects/Investment_Vehicle__c/recordTypes/Inactive_Record_Type.recordType-meta.xml
<RecordType>
    <fullName>Inactive_Record_Type</fullName>
    <active>true</active>
    <description>This record type is used for inactive investment vehicle. it has been used in filters and assigned to read only pagelayout</description>
    <label>Inactive Record Type</label>
</RecordType>