PROD_10-24-19/force-app/main/default/objects/Investment_Vehicle__c/recordTypes/Listed_Issuers.recordType-meta.xml
<RecordType>
    <fullName>Listed_Issuers</fullName>
    <active>true</active>
    <description>BAM Listed Issuers</description>
    <label>Listed Issuers</label>
</RecordType>