PROD_10-24-19/force-app/main/default/objects/Investment_Vehicle__c/recordTypes/PSG_Archived_Deactivated_Investment_Vehicle.recordType-meta.xml
<RecordType>
    <fullName>PSG_Archived_Deactivated_Investment_Vehicle</fullName>
    <active>false</active>
    <label>Archived - Deactivated Investment Vehicle</label>
</RecordType>