PROD_10-24-19/force-app/main/default/objects/Investment_Vehicle__c/recordTypes/Public_Securities.recordType-meta.xml
<RecordType>
    <fullName>Public_Securities</fullName>
    <active>true</active>
    <description>PSG Strategy</description>
    <label>Public Securities</label>
</RecordType>