PROD_10-24-19/force-app/main/default/objects/Investment_Vehicle__c/validationRules/Related_Fund_Restricted.validationRule-meta.xml
<ValidationRule>
    <fullName>Related_Fund_Restricted</fullName>
    <active>true</active>
    <description>The related fund can only be specified if the investment vehicle is a co-invest</description>
    <errorConditionFormula>AND(
 NOT(ISPICKVAL(Vehicle_Type__c,&#39;Co-Invest&#39;)),
 NOT(ISBLANK( Investment_Vehicle__c ))
)</errorConditionFormula>
    <errorDisplayField>Investment_Vehicle__c</errorDisplayField>
    <errorMessage>The related fund can only be specified for Co-Invest Vehicle Types</errorMessage>
</ValidationRule>