PROD_10-24-19/force-app/main/default/objects/Investment_Vehicle__c/listViews/All_Brookfield_Investment_Vehicles.listView-meta.xml
<ListView>
    <fullName>All_Brookfield_Investment_Vehicles</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Vehicle_Type__c</columns>
    <columns>Status__c</columns>
    <columns>Platform__c</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <label>All Brookfield Investment Vehicles</label>
</ListView>