PROD_10-24-19/force-app/main/default/objects/Investment_Vehicle__c/listViews/Private_Funds_Closed.listView-meta.xml
<ListView>
    <fullName>Private_Funds_Closed</fullName>
    <columns>NAME</columns>
    <columns>Long_Name__c</columns>
    <columns>Vehicle_Type__c</columns>
    <columns>Status__c</columns>
    <columns>Platform__c</columns>
    <columns>Fund_Launch_Date__c</columns>
    <columns>Vintage_Year__c</columns>
    <columns>Historical_Commitment_US__c</columns>
    <columns>Current_Commitments_USD__c</columns>
    <columns>Number_of_Current_Investors__c</columns>
    <columns>Number_of_Current_Investments__c</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Platform__c</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Investment_Vehicle__c.Fund_Internal</value>
    </filters>
    <filters>
        <field>Current_Commitments_Functional_Currenc__c</field>
        <operation>notEqual</operation>
        <value>0</value>
    </filters>
    <label>Private Funds - Closed</label>
</ListView>