PROD_10-24-19/force-app/main/default/objects/Investment_Vehicle__c/listViews/Private_Funds_Co_Invests.listView-meta.xml
<ListView>
    <fullName>Private_Funds_Co_Invests</fullName>
    <columns>NAME</columns>
    <columns>Long_Name__c</columns>
    <columns>Vehicle_Type__c</columns>
    <columns>Investment_Vehicle__c</columns>
    <columns>Status__c</columns>
    <columns>Platform__c</columns>
    <columns>Co_Invest_Classification__c</columns>
    <columns>Fee_Base_Other__c</columns>
    <columns>Fee_Comments__c</columns>
    <columns>Vintage_Year__c</columns>
    <columns>Historical_Commitment_US__c</columns>
    <columns>Current_Commitments_USD__c</columns>
    <columns>Number_of_Current_Investors__c</columns>
    <columns>Number_of_Current_Investments__c</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Vehicle_Type__c</field>
        <operation>equals</operation>
        <value>Co-Invest</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Investment_Vehicle__c.Fund_Internal</value>
    </filters>
    <label>Private Funds - Co-Invests</label>
</ListView>