PROD_10-24-19/force-app/main/default/objects/Investment_Vehicle__c/listViews/Private_Funds_Co_Invests_BPY.listView-meta.xml
<ListView>
    <fullName>Private_Funds_Co_Invests_BPY</fullName>
    <columns>NAME</columns>
    <columns>Exclude_from_Reporting__c</columns>
    <columns>Co_Invest_Classification__c</columns>
    <columns>Sponsors__c</columns>
    <columns>Long_Name__c</columns>
    <columns>Vehicle_Type__c</columns>
    <columns>Status__c</columns>
    <columns>Additional_Notes__c</columns>
    <columns>Vintage_Year__c</columns>
    <columns>Historical_Commitment_US__c</columns>
    <columns>Number_of_Current_Investors__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Platform__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Investment_Vehicle__c.Fund_Internal</value>
    </filters>
    <filters>
        <field>Vehicle_Type__c</field>
        <operation>equals</operation>
        <value>Co-Invest,Separate Accounts,Joint Venture,General Overview</value>
    </filters>
    <filters>
        <field>Platform__c</field>
        <operation>equals</operation>
        <value>Property</value>
    </filters>
    <filters>
        <field>Exclude_from_Reporting__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Private Funds - Co-Invests - BPY</label>
</ListView>