PROD_10-24-19/force-app/main/default/objects/Investment_Vehicle__c/listViews/Public_Securities_SMA.listView-meta.xml
<ListView>
    <fullName>Public_Securities_SMA</fullName>
    <columns>NAME</columns>
    <columns>Vehicle_Type__c</columns>
    <columns>BIM_Strategy__c</columns>
    <columns>Number_of_Institutional_Investors__c</columns>
    <columns>Market_Value_AUM_Quarter__c</columns>
    <columns>Platform__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Investment_Vehicle__c.Public_Securities</value>
    </filters>
    <filters>
        <field>Vehicle_Type__c</field>
        <operation>equals</operation>
        <value>Separately Managed Account</value>
    </filters>
    <label>Public Securities - SMA</label>
</ListView>